2004-10-27  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/output.cpp: better fix for 1004134 after advice
	from Ted.

2004-10-26  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/output.cpp: don't reset modified flag until after
	save has happened, in case it fails.  Fixes 1004134.

	* src/livarot/ShapeSweep.cpp: fix a typo in my cleanups.  Fixes
	1048151.

2004-10-25  Bryce Harringotn <bryce@bryceharrington.org>

	* file.cpp, file.h, dialogs/export.cpp: Adding error return logic
	  for png export code so that failure to write can be tracked.
	  Adding an error dialog for when this occurs.  Fixes bug 1038932. 

	* extension/system.cpp:  Changing sp_ui_error_dialog to g_warning
 	  so won't crash when running from commandline.  Fixes bug
	  1000350. 

	* inkscape.cpp, inkscape.h, main.cpp, dialogs/filedialog.cpp:
	  Adding Inkscape::Application::use_gui flag as temporary hack to
	  prevent gui dialogs from being used when running from
	  commandline.  Fixes bug 1045067.
	
2004-10-26  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/PathCutting.cpp: fix a couple of bugs that I
	introduced that cause crashes on cut path.

2004-10-25  Kees Cook  <kees@outflux.net>

    * src/sp-object.cpp: nasty hack to not export metadata on "Plain SVG".
      I promise I'll fix this with a proper SPObject soon.

2004-10-25  Jon A. Cruz  <jon@joncruz.org>
	* src/file.cpp, src/file.h, src/inkscape.cpp, src/sp-image.cpp,
	src/uri.cpp, src/uri.h, src/dialogs/filedialog.cpp,
	src/extension/input.cpp, src/extension/implementation/script.cpp,
	src/extension/internal/pov-out.cpp, src/extension/internal/ps.cpp,
	src/extension/internal/win32.h, src/extension/plugin/gimpgrad.cpp,
	src/helper/png-write.cpp, src/trace/imagemap.cpp, src/xml/repr-io.cpp:

	Refactoring filenames and file opening

2004-10-24  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am: added/removed files

	* src/util/copy-list.h: nobody's using it right now, get rid of it
